--- a/week4/coolpics/coolpics.css
+++ b/week4/coolpics/coolpics.css
@@ -28,6 +28,7 @@ body {
     box-shadow: 5px 5px 5px #3d3c44;
     margin-left: auto;
     margin-right: auto;
+    cursor: pointer;
 }
 .gallery {
     display: grid;
@@ -68,7 +69,7 @@ header a {
     cursor: pointer;
 }
 .hide {
-    display: none;
+    display: none !important;
 }
 nav {
     /* display: flex; */
@@ -80,32 +81,42 @@ nav ul {
     padding-left: 0;
     margin: 0;
 }
-/* nav ul.menuList li a {
-    text-align: center;
-    font-size: 30px;
-    padding: 25px;
-    color: white;
-} */
 #dropdown {
-    list-style: none; /*removes bullets from list*/
+    list-style: none; 
     text-align: center;
     padding: 0;
+    margin: 0;
     color: white;
+    display: block;
 }
 main {
     background-color: var(--text-light);
 }
-/* #dropdown.show {
+#dropdown.show {
     display: block;
-} */
-/* #dropdown li {
+} 
+#dropdown li {
     padding: 5px;
     font-size: 30px
-} */
- /* .close-viewer {
-
- } */
- /* div.viewer {
+}
+.viewer img {
+    max-width: 80%;
+    grid-row: 2;
+    grid-column: 1 / span 2;
+    align-self: center;
+    justify-self: center;
+ }
+.close-viewer {
+    position: right;
+    top: 5px;
+    right: 5px;
+    color: white;
+    border: none;
+    cursor: pointer;
+    font-size: 20px;
+    background-color: black;
+ }
+div.viewer {
     display: grid;
     position: fixed;
     top:0;
@@ -113,30 +124,12 @@ main {
     right:0;
     left:0;
     background-color: rgba(0, 0, 0, 0.75);
-    /* grid-template-rows: 1fr, 1fr; */
     color: white;
     align-self: center;
-    /* justify-self: center; */
     padding: 20px;
-    /* max-height: 100%; */
-    max-width: 100%;
+    width: 80%;
     z-index: 10;
 }
-.close-viewer {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 5px;
-    cursor: pointer; */
-}
-/* .img {
-    grid-row: 2;
-    grid-column: 1 / span 2;
-    align-self: center;
-    justify-self: center;
-} */
 footer {
     background-color: var(--primary-color);
     color: white;
@@ -148,15 +141,15 @@ footer {
     .gallery {
         grid-template-columns: repeat(2, 1fr);
     }
-    /* nav ul {
+    nav ul {
         text-align: center;
         padding: 20px;
         margin: 0;
-    } */
+    } 
     #dropdown {
         text-align: center;
     }
-    /* .modal {
+    .modal {
         display: none;
         position: fixed;
         top: 0;
@@ -183,6 +176,7 @@ footer {
         padding: 20px;
         border: 1px solid #888;
         width: 80%;
+
     }
     .close {
         float: right;
@@ -208,6 +202,12 @@ footer {
     }
     .viewer {
         max-height: 100%;
+    }
+    #dropdown {
+        display: none;
+    }
+    #menuButton {
+        display: block;
     }
 }
 @media screen and (min-width: 901px) {
