--- a/week7/creditcard/creditcard.css
+++ b/week7/creditcard/creditcard.css
@@ -141,10 +141,9 @@ label[for="expiration"] {
   width: 150px;
   border-radius: 8px;
   height: 42px;
-  font-size: 12px;
-  font-family: var(--primary-font);
+  font-size: 14px;
+  font-family: "Arial";
   text-transform: uppercase;
-  letter-spacing: 1px;
   font-weight: 400;
   outline: none;
   border: none;
