--- a/week7/creditcard/creditcard.css
+++ b/week7/creditcard/creditcard.css
@@ -1,8 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Inconsolata:wght@200..900&display=swap");
 @import url("https://fonts.googleapis.com/css?family=Lato:400, 700,300");
 :root {
-  --primary-font: "Inconsolata";
-  --secondary-font: "lato";
+  --primary-font: "Inconsolata", monospace;
+  --secondary-font: "lato" sans-serif;
   --primary-color: #e3e3e3;
 }
 
@@ -74,6 +74,7 @@ card-button {
   float: right;
 }
 .card-container {
+  
   display: inline-block;
   margin: auto;
   width: 500px;
@@ -131,18 +132,18 @@ label[for="mm"] {
   font-weight: 400;
 }
 .submit {
-  background-color: var(--primary-color);
   position: relative;
   left: 350px;
   bottom: -305px;
   width: 150px;
-  border-radius: 8px;
   height: 42px;
+  border-radius: 8px;
   font-size: 14px;
+  background-color: var(--primary-color);
   font-family: "Arial";
   text-transform: uppercase;
   font-weight: 400;
-  outline: none;
+  /* outline: none; */
   border: none;
   cursor: pointer;
   display: flex;
