--- a/week 10/recipes/recipes.css
+++ b/week 10/recipes/recipes.css
@@ -27,13 +27,15 @@ form {  /*  */
 .search {
     border-bottom: 1px solid lightgray;
     padding-bottom: 20px;
-    margin-bottom: 20px;
+    margin: 20 auto;
+    /* margin-bottom: 20px;
     margin-right: 20px;
-    margin-left: 20px;
+    margin-left: 20px; */
     max-width: 100%;
     margin: 0 auto;
     display: flex;
     align-items: center;
+    justify-content: center;
 }
 .search input[type="text"] {
     flex: 1;
@@ -41,10 +43,16 @@ form {  /*  */
     font-size: 1em;
     border-radius: 5px 0 0 5px;
 }
+.search button {
+    cursor: pointer;
+}
+.search button:hover {
+    background-color: var(--link-color);
+}
 .search-icon {
     width: 32px;
 }
-.body-container {
+.everything-container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -54,11 +62,13 @@ form {  /*  */
     border-radius: 7px;
     margin-top: 20px;
 }
-.apple-crisp-img {
+.recipe-img {
     flex: 1;
     padding: 20px;
     box-sizing: border-box;
-    width: 50%;
+    width: 500%;
+    max-width: 100%;
+    height: auto;
 }
 .column-one {
     flex: 1;
@@ -74,6 +84,7 @@ form {  /*  */
     flex: 1;
     max-width: 45%;
     padding-left: 20px;
+    padding-top: 20px;
     box-sizing: border-box;
 }
 /* remove all default margins from elements inside .column-two */
@@ -81,14 +92,19 @@ form {  /*  */
     margin: 0;
     padding: 0;
 }
-.dessert {
+.tags {
+    display: inline-block;
     border: 2px solid gray;
-    width: 83px;
-    margin-top: 20px;
-    padding: 5px;
+    /* width: 83px; */
+    /* height: 50px; */
+    /* margin-top: 20px; */
+    padding: 5px 10px;
     font-size: 1.2em;
     font-family: Arial, Helvetica, sans-serif;
-    align-content:center;
+    text-align: center;
+    margin: 5px;
+    border-radius: 5px;
+    /* align-content:center; */
 }
 h1, 
 h2 {
@@ -114,7 +130,7 @@ h2 {
 .youtube, 
 .pinterest {
     width: 50px;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 footer {
     display: flex;
@@ -133,7 +149,7 @@ footer {
 /* screen and makes it so it's targeting the screen size AND max-width */
 @media screen and (max-width: 500px) {
     header {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         text-align: center;
       }
@@ -148,23 +164,10 @@ footer {
         justify-content: center;
         max-width: 100%;
     }
-    .apple-crisp-img {
-        /* flex: 0 1 250px; */
+    .recipe-img {
         width: 100%;
         align-self: center;
     }
-    /* .recipe-container .food-category, 
-    .recipe-container h2, 
-    .recipe-container .rating,
-    .recipe-container .description {
-        flex: 1;
-        max-width: 50%;
-    } */
-    /* .apple-crisp-img {
-        max-width: 80%;
-        padding-top: 30px;
-        align-self: center;
-    } */
     .description {
         display: none;
     }
