--- a/week9/recipes/recipes.css
+++ b/week9/recipes/recipes.css
@@ -44,7 +44,7 @@ form {  /*  */
 .search-icon {
     width: 32px;
 }
-.body-container {
+.everything-container {
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -114,7 +114,7 @@ h2 {
 .youtube, 
 .pinterest {
     width: 50px;
-    padding-top: 50px;
+    padding-top: 20px;
 }
 footer {
     display: flex;
@@ -133,7 +133,7 @@ footer {
 /* screen and makes it so it's targeting the screen size AND max-width */
 @media screen and (max-width: 500px) {
     header {
-        flex-direction: column;
+        flex-direction: row;
         align-items: center;
         text-align: center;
       }
