--- a/finale/soap-calc/soapCalc.css
+++ b/finale/soap-calc/soapCalc.css
@@ -1,3 +1,448 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Serif+Text:ital@0;1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap");
+
+:root {
+  --primary-color: #FDFBF6;
+  --secondary-color: #5c5645;
+  --accent1-color: #7DA1AC;
+  --accent2-color: #B2C2A1;
+  --accent3-color: #0f3c6b;
+  --title-font: "Delius Unicase", sans-serif;
+  --heading-font: "Lato", sans-serif;
+  --paragraph-font: "Raleway", Lato, Helvetica;
+
+  --headline-color-on-white: var(--secondary-color ); /* headlines on a white background */
+  --headline-color-on-color: var(--secondary-color); /* headlines on a colored background */
+  --paragraph-color-on-white: var(--secondary-color);/* paragraph text on a white background */
+  --paragraph-color-on-color: var(--secondary-color); /* paragraph text on a colored background */
+  --paragraph-background-color: var(--primary-color);
+  --nav-link-color: var(--primary-color);
+  --nav-background-color: var(--accent1-color);
+  --nav-hover-link-color: var(--secondary-color);
+  --nav-hover-background-color: var(--accent2-color);
+}
+
+header {
+    background-color: var(--accent1-color);
+    padding: 1em;
+    padding-bottom: 2em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    box-sizing: border-box;
+}
+.navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    gap: 1em;
+}
+.wrapper {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    gap: 1em;
+}
 .logo {
-    width: 100px;
+    width: 150px;
+    flex-shrink: 0;
+}
+.header-titles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+.header-title {
+    flex: 1; 
+    font-family: var(--title-font);
+    color: var(--accent3-color);
+    margin: 0;
+    font-size: 2em;
+}
+.page-title {
+    flex: 1; 
+    font-family: var(--title-font);
+    color: var(--accent3-color);
+    margin: 0;
+    font-size: 1.2em;
+}
+.nav-links {
+    display: flex;
+    flex-direction: row;
+    background-color: var(--accent3-color);
+    list-style-type: none;
+    margin: 0;
+    margin-bottom: 2em;
+    padding: 0;
+    padding-left: 1.5em;
+    display: flex;
+    gap: 1em;
+}
+.nav-links a {
+    text-decoration: none;
+    color: var(--primary-color);
+    padding: 0.5em 1em;
+    background-color: var(--accent3-color);
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+.nav-links a:hover {
+    background-color: var(--accent1-color);
+    color: var(--primary-color)
+}
+.icon, 
+.logo {
+    object-fit: contain;
+    height: 100px;
+}
+.icon {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    flex: 1;
+    border-radius: 10px;
+    /* align-self:last baseline; */
+
+}
+.icon:hover {
+    cursor: pointer;
+    background-color: var(--accent2-color);
+    border-radius: 50%;
+    width: 40px;
+}
+.search-container {
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+}
+.search-bar {
+    display: none;
+    width: 200px;
+    padding: 0.5em;
+    border: 1px solid var(--secondary-color);
+    border-radius: 5px;
+}
+/* Recipe/Main Page */
+body {
+    background-color: var(--primary-color);
+    margin: 0;
+    color: var(--paragraph-color-on-white);
+}
+.message {
+    width: 80%;
+    margin: 0 auto;
+    padding: 1em;
+}
+.everything-container {
+    display: grid;
+    grid-template-areas: 
+        "recipe-name recipe-name"
+        "column-one column-two";
+    grid-template-columns: 1fr 1fr;
+    /* gap: 2em; */
+    padding-bottom: 30px;
+    box-sizing: border-box;
+}
+.column-one {
+    grid-area: column-one;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.recipe-img {
+    width: 70%;
+}
+.column-two {
+    grid-area: column-two;
+    text-align: left;
+    /* padding: 1em; */
+    /* margin-top: 1em; */
+    background-color: var(--primary-color);
+    z-index: 1;
+}
+.recipe-name {
+    grid-area: recipe-name;
+    text-align: center;
+    font-family: var(--title-font);
+    font-size: 1.5em;
+    color: var(--secondary-color);
+    /* margin-bottom: 1em; */
+    color: var(--secondary-color);
+    z-index: 2;
+}
+.ingredients {
+    font-family: var(--paragraph-background-color);
+    color: var(--paragraph-color-on-color);
+}
+.ingredients h3 {
+    font-family: var(--paragraph-font);
+    color: var(--headline-color-on-color);
+    text-align: left;
+}
+.ingredients ul {
+    list-style: none;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+footer {
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--accent1-color);
+    color: var(--accent3-color)
+}
+.site-plan a {
+    color: var(--accent3-color);
+    padding-left: 2em;
+    cursor: pointer;
+}
+.site-plan a:hover {
+    color: var(--primary-color);
+    cursor: pointer;
+}
+.insta, 
+.youtube, 
+.pinterest {
+    width: 30px;
+    align-self: flex-end;
+    padding: 0.5em;
+}
+/* Soap Calc Page*/
+#soap-calc {
+    display: grid;
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: 1fr ;
+    max-width: 95%;
+    margin: 0 auto;
+}
+ #form {
+    max-width: 90%;
+    margin: 0 auto;
+    font-family: var(--paragraph-font);
+}
+
+/* left column  */
+
+.soap-calc {
+    grid-column: 1;
+    gap: 1em;
+}
+.soap-calc input, 
+.soap-calc select {
+    width: 100%;
+    padding: 0.25em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+.soap-calc button {
+    padding: 0.5em;
+    background-color: var(--accent3-color);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: .8em;
+}
+.soap-calc button:hover {
+    background-color: var(--accent1-color);
+    color: var(--primary-color)
+}
+
+/* right column (dynamic content) */
+
+.add-oils {
+    grid-column: 2;
+    gap: 1em;
+}
+#selected-oils, 
+#selected-additives{
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    background-color: var(--primary-color);
+}
+.soap-calc, 
+.add-oils {
+    text-align: left;
+}
+.oil-entry, 
+.additive-entry {
+    gap: 1em;
+    margin-bottom: 0.5em;
+}
+.oil-entry span,
+.additive-entry span {
+    /* font-weight: bold; */
+    color: var(--secondary-color);
+}
+.percentage-input {
+    width: 5em;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+#selected-oils {
+    margin-top: 1em;
+    padding: 1em;
+    border-top: 1px solid #ccc;
+}
+#selected-additives {
+    margin-top: 1em;
+    padding: 1em;
+    /* border-top: 1px solid #ccc; */
+}
+.oil-entry {
+    /* align-items: center; */
+    gap: 1em;
+    margin-bottom: 0.5em;
+}
+.oil-entry span {
+    /* font-weight: bold; */
+    color: var(--secondary-color);
+}
+.additive-entry {
+    align-items: center;
+    gap: 1em;
+    margin-bottom: 0.5em;
+}
+.additive-entry span {
+    /* font-weight: bold; */
+    color: var(--secondary-color);
+}
+.percentage-input {
+    width: 100%;
+    padding: 0.5em;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: .75em;
+}
+.bottom-buttons button {
+    margin-top: 1em;
+    padding: 0.5em 1em;
+    background-color: var(--accent3-color);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: .8em;
+}
+.bottom-buttons button:hover {
+    background-color: var(--accent1-color);
+    color: var(--primary-color)
+}
+.lye-type,
+.unit-of-measurement,
+.base-oil,
+.additive {
+    padding: 0.5em 0;
+    margin-right: 1em;
+}
+.super-fat, 
+.total-oil-weight,
+.water {
+    padding: 0.5em 0;
+    margin-right: 1.5em;
+}
+.buttons {
+    margin-top: 1em;
+}
+#add-oil {
+    margin-top: 1em;
+}
+#clear-field, 
+#calculate-recipe {
+    display: none;
+}
+#selected-oils,
+#selected-additives {
+    display: none;
+}
+/* remove spinner arrrows form number input */
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+input[type=number] {
+    -moz-appearance: textfield;
+}
+@media (max-width: 768px) {
+    .wrapper {
+        flex-direction: column;
+        align-items: center;
+    }
+    .header-title {
+        text-align: center;
+    }
+    .grid-container {
+        grid-template-columns: 1fr;
+    }
+    .soap-calc, 
+    .add-oils {
+        grid-column: 1;
+    }
+    .everything-container {
+        grid-template-areas:
+            "recipe-name" /* recipe name first */
+            "column-one" /* image second */
+            "column-two"; /* ingredients and instructions last */
+        grid-template-columns: 1fr;
+        text-align: center;
+    }
+    .column-one {
+        grid-area: column-one; 
+    }
+    .column-two {
+        grid-area: column-two;
+        padding: 1em;
+        padding-left: 3em;
+    }
+    .recipe-name {
+        grid-area: recipe-name;
+        text-align: center;
+        margin-bottom: 1em;
+    }
+    .recipe-img {
+        width: 80%;
+        align-content: center;
+    }
+    /* soap calc page */
+    .soap-calc {
+        grid-template-columns: 1fr;
+    }
+    .soap-calc label,
+    .soap-calc input,
+    .soap-calc select,
+    .soap-calc button {
+        width: 100%;
+    }
+    .percentage-input {
+        width: 100%;
+        padding: 0.5em;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        font-size: .75em;
+    }
+}
+@media (min-width: 1200px) {
+    .wrapper {
+        justify-content: flex-start;
+        gap: 2em;
+    }
+    .search-container {
+        margin-left: auto;
+    }
 }
