--- a/finale/soap-calc-frontend/soapCalc.css
+++ b/finale/soap-calc-frontend/soapCalc.css
@@ -126,6 +126,8 @@ header {
     display: none;
     width: 200px;
     padding: 0.5em;
+    font-size: 16px;
+    margin-left: 10px;
     border: 1px solid var(--secondary-color);
     border-radius: 5px;
 }
@@ -141,30 +143,36 @@ body {
     padding: 1em;
 }
 .everything-container {
-    display: flex;
+    display: grid;
     grid-template-areas: 
         "recipe-name recipe-name"
         "column-one column-two";
     grid-template-columns: 1fr 1fr;
+    gap: 1em;
     padding-bottom: 30px;
     box-sizing: border-box;
 }
+/* .everything-container section {
+    margin-bottom: 2em;
+    width: 100%;
+} */
 .column-one {
     grid-area: column-one;
     display: flex;
     justify-content: center;
     align-items: center;
-    /* text-align: center; */
+    text-align: center;
 }
 img {
     max-width: 100%;
     width: 70%;
 }
 .column-two {
-    width: 100%;
     grid-area: column-two;
     padding-right: 2em;
     background-color: var(--primary-color);
+    box-sizing: border-box;
+    text-align: left;
 }
 .recipe-name {
     grid-area: recipe-name;
@@ -189,6 +197,17 @@ img {
     text-align: left;
     margin: 0;
     padding: 0;
+}
+h4 {
+    font-size: 1.2em;
+    margin: 5px;
+}
+p {
+    margin: 0;
+    font-size: 1em;
+}
+p.description {
+    margin: 0;
 }
 footer {
     margin-top: 1em;
@@ -377,10 +396,6 @@ input[type=number] {
     appearance: textfield;
 }
 @media (max-width: 768px) {
-    .wrapper {
-        flex-direction: column;
-        align-items: center;
-    }
     .header-title {
         text-align: center;
     }
@@ -397,16 +412,39 @@ input[type=number] {
             "column-one" /* image second */
             "column-two"; /* ingredients and instructions last */
         grid-template-columns: 1fr;
-        text-align: center;
+        gap: 1em;
+        text-align: left;
+        box-sizing: border-box;
     }
     .column-one {
         grid-area: column-one; 
+        display: flex;
+        justify-content: center;
+        max-width: 100%;
+        width: 100%;
     }
     .column-two {
         grid-area: column-two;
         padding: 1em;
         padding-left: 3em;
+        width: 100%;
+        max-width: 100%;
+        object-fit: contain;
+        text-align: left;
     }
+    img {
+        max-width: 100%;
+        width: 70%;
+    }
+    p.description {
+        margin: 0;
+        font-size: 1em;
+        max-width: 100%;
+        overflow-wrap: break-word;
+        white-space: normal;
+        text-align: justify;
+    }
+    p
     .recipe-name {
         grid-area: recipe-name;
         text-align: center;
@@ -432,6 +470,27 @@ input[type=number] {
         border: 1px solid #ccc;
         border-radius: 5px;
         font-size: .75em;
+    }
+    footer {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+        padding: 20px;
+    }
+    .site-plan {
+        margin-bottom: 10px;
+    }
+    .social {
+        margin-bottom: 10px;
+    }
+    .social a {
+        display: inline-block;
+        margin: 0 5px;
+    }
+    .insta, 
+    .youtube, 
+    .pinterest {
+        width: 25px;
     }
 }
 @media (min-width: 1200px) {
