--- a/finale/soap-calc-frontend/soapCalc.css
+++ b/finale/soap-calc-frontend/soapCalc.css
@@ -281,6 +281,10 @@ footer {
 .add-oils {
     grid-column: 2;
     gap: 1em;
+    overflow: visible;
+    height: auto;
+    display: block;
+    z-index: 10;
 }
 #selected-oils, 
 #selected-additives{
@@ -353,6 +357,7 @@ footer {
     border-radius: 5px;
     cursor: pointer;
     font-size: .8em;
+    z-index: 1000;
 }
 .bottom-buttons button:hover {
     background-color: var(--accent1-color);
@@ -385,19 +390,58 @@ footer {
 #selected-additives {
     display: none;
 }
-.save-recipe {
-    display: none;
-}
-#recipe-output {
-    display: none !important;
-    margin-top: 20px;
-    padding: 1em;
+
+#static-recipe-view {
+    margin: 20px auto;
+    padding: 20px;
     border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+    max-width: 500px;
+}
+
+#static-recipe-content ul {
+    list-style-type: none;
+    padding: 0;
+}
+
+#static-recipe-content li {
+    margin: 5px 0;
+    font-size: 1rem;
+    line-height: 1.4;
+}
+
+button.remove-entry {
+    margin-top: 1em;
+    padding: 0.5em 1em;
+    background-color: var(--accent3-color);
+    color: var(--primary-color);
+    border: none;
     border-radius: 5px;
-    background-color: var(--primary-color);
-    font-family: var(--paragraph-font);
-    font-size: 1em;
-    line-height: 1.5;
+    cursor: pointer;
+    font-size: .8em;
+    z-index: 1000;
+}
+button.remove-entry:hover {
+    background-color: var(--accent1-color);
+    color: var(--primary-color)
+}
+#close-recipe, 
+#view-recipe {
+    margin-top: 1em;
+    padding: 0.5em 1em;
+    background-color: var(--accent3-color);
+    color: var(--primary-color);
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: .8em;
+    z-index: 1000;
+}
+#close-recipe:hover, 
+#view-recipe:hover {
+    background-color: var(--accent1-color);
+    color: var(--primary-color)
 }
 /* remove spinner arrrows form number input */
 input[type=number]::-webkit-inner-spin-button,
@@ -419,9 +463,6 @@ input[type=number] {
     .wrapper {
         flex-direction: column;
         align-items: center;
-    }
-    .grid-container {
-        grid-template-columns: 1fr;
     }
     .soap-calc, 
     .add-oils {
